Debugging issues of light/dark mode and having blog post input fields save to local storage

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,7 +34,7 @@ main {
     
 }
 
-#content-box {
+.content-box {
     
 }
 
@@ -61,8 +61,12 @@ main {
     background-color: var(--dark-color);
     color: var(--light-color);
 }
+.dark header, .dark footer, .dark main {
+    background-color: var(--dark-color);
+    color: var(--light-color);
+}
 
-.light {
+.light header, .light footer, .light main{
     background-color: var(--light-color);
     color: var(--dark-color);
 }
